# dil700_term_project

./: .gitignore  README.md  pyproject.toml  referencing-documents.md  requirements.txt
notebooks/: 01_STAC_to_CSV.ipynb  03_data_pipeline.ipynb  04-data-visualization.ipynb  05-srcnn.ipynb  06-swinir.ipynb  07-spiral.ipynb
src/: metrics.py
