[project]
name = "sar-sr-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "boto3>=1.42.79",
    "fsspec>=2026.3.0",
    "ipykernel>=7.2.0",
    "keras-tuner>=1.4.8",
    "matplotlib>=3.10.8",
    "numpy>=1.26.0,<2.1.0",
    "pandas>=3.0.1",
    "pystac>=1.14.3",
    "rasterio>=1.5.0",
    "s3fs>=0.4.2",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "tabulate>=0.10.0",
    "tensorflow==2.18.0",
    "tensorflow-metal==1.2.0",
    "tqdm>=4.67.3",
]
